{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 1528,
  "lineage": "db5c5043-29f3-7b9d-e005-7fa918e9e01f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0690dbcf64cbd1233",
            "arn": "arn:aws:ec2:ap-south-1:949945086246:elastic-ip/eipalloc-0690dbcf64cbd1233",
            "association_id": "eipassoc-070c80812e58ce884",
            "domain": "vpc",
            "id": "eipalloc-0690dbcf64cbd1233",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-025c29705506e5765",
            "private_dns": "ip-10-2-0-202.ap-south-1.compute.internal",
            "private_ip": "10.2.0.202",
            "public_dns": "ec2-13-202-248-172.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.248.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "upscpro-stage2-nat-eip-1"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-nat-eip-1",
              "Project": "upscpro-stage2"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076a1c92e7c532330",
            "arn": "arn:aws:ec2:ap-south-1:949945086246:elastic-ip/eipalloc-076a1c92e7c532330",
            "association_id": "eipassoc-05facd23a6e1f2519",
            "domain": "vpc",
            "id": "eipalloc-076a1c92e7c532330",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0bb3cf23e5a7d2076",
            "private_dns": "ip-10-2-1-158.ap-south-1.compute.internal",
            "private_ip": "10.2.1.158",
            "public_dns": "ec2-15-206-241-189.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.241.189",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "upscpro-stage2-nat-eip-2"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-nat-eip-2",
              "Project": "upscpro-stage2"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087d1c9a513324697",
            "arn": "arn:aws:ec2:ap-south-1:949945086246:instance/i-04d6413a78f362f0e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d6413a78f362f0e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "upscAppAwsKey-new",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-078afd8d74f60d3af",
            "private_dns": "ip-10-2-0-132.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.132",
            "public_dns": "ec2-13-233-87-17.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.87.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:949945086246:key/cdbe3e08-d78d-46c7-9d34-bec79c070b2a",
                "tags_all": {
                  "Environment": "stage2",
                  "ManagedBy": "terraform",
                  "Project": "upscpro-stage2"
                },
                "throughput": 125,
                "volume_id": "vol-00f73bdc0bb0fa0ea",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf543ff86c86c799",
            "tags": {
              "Name": "upscpro-stage2-docker",
              "Type": "docker"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-docker",
              "Project": "upscpro-stage2",
              "Type": "docker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0509afc908310fdd2"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_db_instance.main",
            "aws_db_subnet_group.main",
            "aws_instance.strapi",
            "aws_lb.main",
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_security_group.ecs",
            "aws_security_group.rds",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "strapi",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087d1c9a513324697",
            "arn": "arn:aws:ec2:ap-south-1:949945086246:instance/i-084af1ab9e9d13acc",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-084af1ab9e9d13acc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "upscAppAwsKey-new",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cf721b68f502c258",
            "private_dns": "ip-10-2-2-55.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.2.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:ap-south-1:949945086246:key/cdbe3e08-d78d-46c7-9d34-bec79c070b2a",
                "tags_all": {
                  "Environment": "stage2",
                  "ManagedBy": "terraform",
                  "Project": "upscpro-stage2"
                },
                "throughput": 125,
                "volume_id": "vol-0266308cd2cd90568",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f7022d91621fc6c6",
            "tags": {
              "Name": "upscpro-stage2-strapi",
              "Type": "strapi"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-strapi",
              "Project": "upscpro-stage2",
              "Type": "strapi"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0509afc908310fdd2"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:internet-gateway/igw-0fec49f52d0ef177e",
            "id": "igw-0fec49f52d0ef177e",
            "owner_id": "949945086246",
            "tags": {
              "Name": "upscpro-stage2-igw"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-igw",
              "Project": "upscpro-stage2"
            },
            "vpc_id": "vpc-00f92e2c399f2ae9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:loadbalancer/app/upscpro-stage2-alb/05d2bffd02153231",
            "arn_suffix": "app/upscpro-stage2-alb/05d2bffd02153231",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "upscpro-stage2-alb-664730014.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:loadbalancer/app/upscpro-stage2-alb/05d2bffd02153231",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "upscpro-stage2-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-076bb7c575ddbc277"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00230a653a75871fd"
              },
              {
                "subnet_id": "subnet-0bf543ff86c86c799"
              }
            ],
            "subnets": [
              "subnet-00230a653a75871fd",
              "subnet-0bf543ff86c86c799"
            ],
            "tags": {
              "Name": "upscpro-stage2-alb"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-alb",
              "Project": "upscpro-stage2"
            },
            "vpc_id": "vpc-00f92e2c399f2ae9d",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:listener/app/upscpro-stage2-alb/05d2bffd02153231/422b24f27184a19a",
            "certificate_arn": "arn:aws:acm:ap-south-1:949945086246:certificate/fbe0e48a-a1ba-44c4-b588-e01d94c46ee8",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:targetgroup/upscpro-stage2-frontend-tg/8d1c1c0b41715183",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:listener/app/upscpro-stage2-alb/05d2bffd02153231/422b24f27184a19a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:loadbalancer/app/upscpro-stage2-alb/05d2bffd02153231",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {},
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Project": "upscpro-stage2"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.alb_test",
            "aws_acm_certificate.main",
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "tls_private_key.alb_test",
            "tls_self_signed_cert.alb_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "faculty_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:targetgroup/upscpro-stage2-faculty-ui-tg/91cf120f3067c64e",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:listener-rule/app/upscpro-stage2-alb/05d2bffd02153231/422b24f27184a19a/414e663826b8818f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/faculty*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:listener-rule/app/upscpro-stage2-alb/05d2bffd02153231/422b24f27184a19a/414e663826b8818f",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:listener/app/upscpro-stage2-alb/05d2bffd02153231/422b24f27184a19a",
            "priority": 101,
            "tags": {},
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Project": "upscpro-stage2"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.alb_test",
            "aws_acm_certificate.main",
            "aws_lb.main",
            "aws_lb_listener.main",
            "aws_lb_target_group.faculty_ui",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "tls_private_key.alb_test",
            "tls_self_signed_cert.alb_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "onboarding_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:targetgroup/upscpro-stage2-onboarding-ui-tg/8a4d0f2e46652fbd",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:listener-rule/app/upscpro-stage2-alb/05d2bffd02153231/422b24f27184a19a/5ab38128a08b5068",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/onboarding*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:listener-rule/app/upscpro-stage2-alb/05d2bffd02153231/422b24f27184a19a/5ab38128a08b5068",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:listener/app/upscpro-stage2-alb/05d2bffd02153231/422b24f27184a19a",
            "priority": 100,
            "tags": {},
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Project": "upscpro-stage2"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.alb_test",
            "aws_acm_certificate.main",
            "aws_lb.main",
            "aws_lb_listener.main",
            "aws_lb_target_group.frontend",
            "aws_lb_target_group.onboarding_ui",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "tls_private_key.alb_test",
            "tls_self_signed_cert.alb_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "faculty_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:targetgroup/upscpro-stage2-faculty-ui-tg/91cf120f3067c64e",
            "arn_suffix": "targetgroup/upscpro-stage2-faculty-ui-tg/91cf120f3067c64e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:targetgroup/upscpro-stage2-faculty-ui-tg/91cf120f3067c64e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:949945086246:loadbalancer/app/upscpro-stage2-alb/05d2bffd02153231"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "upscpro-stage2-faculty-ui-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "upscpro-stage2-faculty-ui-tg"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-faculty-ui-tg",
              "Project": "upscpro-stage2"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-00f92e2c399f2ae9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:targetgroup/upscpro-stage2-frontend-tg/8d1c1c0b41715183",
            "arn_suffix": "targetgroup/upscpro-stage2-frontend-tg/8d1c1c0b41715183",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:targetgroup/upscpro-stage2-frontend-tg/8d1c1c0b41715183",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:949945086246:loadbalancer/app/upscpro-stage2-alb/05d2bffd02153231"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "upscpro-stage2-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "upscpro-stage2-frontend-tg"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-frontend-tg",
              "Project": "upscpro-stage2"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-00f92e2c399f2ae9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "onboarding_ui",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:targetgroup/upscpro-stage2-onboarding-ui-tg/8a4d0f2e46652fbd",
            "arn_suffix": "targetgroup/upscpro-stage2-onboarding-ui-tg/8a4d0f2e46652fbd",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:949945086246:targetgroup/upscpro-stage2-onboarding-ui-tg/8a4d0f2e46652fbd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:949945086246:loadbalancer/app/upscpro-stage2-alb/05d2bffd02153231"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "upscpro-stage2-onboarding-ui-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "upscpro-stage2-onboarding-ui-tg"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-onboarding-ui-tg",
              "Project": "upscpro-stage2"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-00f92e2c399f2ae9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0690dbcf64cbd1233",
            "association_id": "eipassoc-070c80812e58ce884",
            "connectivity_type": "public",
            "id": "nat-01cf190240d05f6af",
            "network_interface_id": "eni-025c29705506e5765",
            "private_ip": "10.2.0.202",
            "public_ip": "13.202.248.172",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0bf543ff86c86c799",
            "tags": {
              "Name": "upscpro-stage2-nat-gateway-1"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-nat-gateway-1",
              "Project": "upscpro-stage2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-076a1c92e7c532330",
            "association_id": "eipassoc-05facd23a6e1f2519",
            "connectivity_type": "public",
            "id": "nat-064804b3930434610",
            "network_interface_id": "eni-0bb3cf23e5a7d2076",
            "private_ip": "10.2.1.158",
            "public_ip": "15.206.241.189",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00230a653a75871fd",
            "tags": {
              "Name": "upscpro-stage2-nat-gateway-2"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-nat-gateway-2",
              "Project": "upscpro-stage2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:route-table/rtb-054979d8181b92d71",
            "id": "rtb-054979d8181b92d71",
            "owner_id": "949945086246",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01cf190240d05f6af",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "upscpro-stage2-private-rt-1"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-private-rt-1",
              "Project": "upscpro-stage2"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f92e2c399f2ae9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:route-table/rtb-0ae39365a25e7e21a",
            "id": "rtb-0ae39365a25e7e21a",
            "owner_id": "949945086246",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-064804b3930434610",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "upscpro-stage2-private-rt-2"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-private-rt-2",
              "Project": "upscpro-stage2"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f92e2c399f2ae9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:route-table/rtb-0b85755e3143ee895",
            "id": "rtb-0b85755e3143ee895",
            "owner_id": "949945086246",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fec49f52d0ef177e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "upscpro-stage2-public-rt"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-public-rt",
              "Project": "upscpro-stage2"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f92e2c399f2ae9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e02fc00cc517605",
            "route_table_id": "rtb-054979d8181b92d71",
            "subnet_id": "subnet-0f7022d91621fc6c6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04a0b8578be45e012",
            "route_table_id": "rtb-0ae39365a25e7e21a",
            "subnet_id": "subnet-0330e8e98d076235e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f935be6c7eedc331",
            "route_table_id": "rtb-0b85755e3143ee895",
            "subnet_id": "subnet-0bf543ff86c86c799"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd628d9283fea4c9",
            "route_table_id": "rtb-0b85755e3143ee895",
            "subnet_id": "subnet-00230a653a75871fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:security-group/sg-076bb7c575ddbc277",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076bb7c575ddbc277",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "upscpro-stage2-alb-20251028032814828900000002",
            "name_prefix": "upscpro-stage2-alb-",
            "owner_id": "949945086246",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "upscpro-stage2-alb-sg"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-alb-sg",
              "Project": "upscpro-stage2"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f92e2c399f2ae9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:security-group/sg-0509afc908310fdd2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0509afc908310fdd2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1337,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076bb7c575ddbc277"
                ],
                "self": false,
                "to_port": 1337
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076bb7c575ddbc277"
                ],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076bb7c575ddbc277"
                ],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076bb7c575ddbc277"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076bb7c575ddbc277"
                ],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "upscpro-stage2-ec2-20251028032817355200000005",
            "name_prefix": "upscpro-stage2-ec2-",
            "owner_id": "949945086246",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "upscpro-stage2-ec2-sg"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-ec2-sg",
              "Project": "upscpro-stage2"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f92e2c399f2ae9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:security-group/sg-090ae2a1bf79a10e5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090ae2a1bf79a10e5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-076bb7c575ddbc277"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "upscpro-stage2-ecs-20251028032817309400000004",
            "name_prefix": "upscpro-stage2-ecs-",
            "owner_id": "949945086246",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "upscpro-stage2-ecs-sg"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-ecs-sg",
              "Project": "upscpro-stage2"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f92e2c399f2ae9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:security-group/sg-04a4366b05907e111",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-04a4366b05907e111",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0509afc908310fdd2"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-090ae2a1bf79a10e5"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "upscpro-stage2-rds-20251028032819645900000007",
            "name_prefix": "upscpro-stage2-rds-",
            "owner_id": "949945086246",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "upscpro-stage2-rds-sg"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-rds-sg",
              "Project": "upscpro-stage2"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f92e2c399f2ae9d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:subnet/subnet-0f7022d91621fc6c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7022d91621fc6c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949945086246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "upscpro-stage2-private-subnet-1",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-private-subnet-1",
              "Project": "upscpro-stage2",
              "Type": "private"
            },
            "vpc_id": "vpc-00f92e2c399f2ae9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:subnet/subnet-0330e8e98d076235e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0330e8e98d076235e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "949945086246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "upscpro-stage2-private-subnet-2",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-private-subnet-2",
              "Project": "upscpro-stage2",
              "Type": "private"
            },
            "vpc_id": "vpc-00f92e2c399f2ae9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:subnet/subnet-0bf543ff86c86c799",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf543ff86c86c799",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "949945086246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "upscpro-stage2-public-subnet-1",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-public-subnet-1",
              "Project": "upscpro-stage2",
              "Type": "public"
            },
            "vpc_id": "vpc-00f92e2c399f2ae9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:subnet/subnet-00230a653a75871fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00230a653a75871fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "949945086246",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "upscpro-stage2-public-subnet-2",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-public-subnet-2",
              "Project": "upscpro-stage2",
              "Type": "public"
            },
            "vpc_id": "vpc-00f92e2c399f2ae9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:949945086246:vpc/vpc-00f92e2c399f2ae9d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0926e4547cce0ed40",
            "default_route_table_id": "rtb-0c6d4d11d790f3786",
            "default_security_group_id": "sg-059f7a118252ea051",
            "dhcp_options_id": "dopt-0392fd33e9c9f4e87",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00f92e2c399f2ae9d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c6d4d11d790f3786",
            "owner_id": "949945086246",
            "tags": {
              "Name": "upscpro-stage2-vpc"
            },
            "tags_all": {
              "Environment": "stage2",
              "ManagedBy": "terraform",
              "Name": "upscpro-stage2-vpc",
              "Project": "upscpro-stage2"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}